make punctuation part of nucleus

--- a/project/explanation_01.ipynb
+++ b/project/explanation_01.ipynb
@@ -386,66 +386,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I 'm often there for three hours .  It makes me feel great to do something for the environment .  \n",
+      "But Wang has got used to it and can see the benefits now .  \" I used to speak too little .  But being a team leader means you have to talk a lot .  You could even call me an excellent speaker today . \"  \n",
       "Nucleus is on the left.\n",
       "Nucleus's depth <= 100.\n",
-      "Nucleus is flat.\n",
-      "Will use the whole segment.\n",
-      "Satellite's nucleus is on the right.\n",
-      "Nuclei proximity is NucleusProximity.FAR\n",
-      "Satellite's left subsegment is not nucleus.\n",
+      "Parsing result:\n",
+      "(ROOT\n",
+      "  (S ('' '')\n",
+      "    (NP (CC But))\n",
+      "    (ADVP (NNP Wang))\n",
+      "    (VP\n",
+      "      (VP (VBZ has)\n",
+      "        (VP (VBN got)\n",
+      "          (S\n",
+      "            (VP (VBN used)\n",
+      "              (PP (TO to)\n",
+      "                (NP (PRP it)))))))\n",
+      "      (CC and)\n",
+      "      (VP (MD can)\n",
+      "        (VP (VB see)\n",
+      "          (NP (DT the) (NNS benefits))\n",
+      "          (ADVP (RB now)))))\n",
+      "    (. .) ('' '')))\n",
+      "\n",
+      "Constituencies:\n",
+      "    type  start  end  depth\n",
+      "0     ''      0    1      2\n",
+      "1     CC      1    2      3\n",
+      "2     NP      1    2      2\n",
+      "3    NNP      2    3      3\n",
+      "4   ADVP      2    3      2\n",
+      "5    VBZ      3    4      4\n",
+      "6    VBN      4    5      5\n",
+      "7    VBN      5    6      7\n",
+      "8     TO      6    7      8\n",
+      "9    PRP      7    8      9\n",
+      "10    NP      7    8      8\n",
+      "11    PP      6    8      7\n",
+      "12    VP      5    8      6\n",
+      "13     S      5    8      5\n",
+      "14    VP      4    8      4\n",
+      "15    VP      3    8      3\n",
+      "16    CC      8    9      3\n",
+      "17    MD      9   10      4\n",
+      "18    VB     10   11      5\n",
+      "19    DT     11   12      6\n",
+      "20   NNS     12   13      6\n",
+      "21    NP     11   13      5\n",
+      "22    RB     13   14      6\n",
+      "23  ADVP     13   14      5\n",
+      "24    VP     10   14      4\n",
+      "25    VP      9   14      3\n",
+      "26    VP      3   14      2\n",
+      "27     .     14   15      2\n",
+      "28    ''     15   16      2\n",
+      "29     S      0   16      1\n",
+      "30  ROOT      0   16      0\n",
+      "\n",
+      "Sentence starts at 1044.\n",
+      "Boundaries: (1, 8, 8, 15)\n",
+      "Left and right VP boundaries: (3, 8), (9, 14)\n",
+      "Umbrella VPs:\n",
+      "   type  start  end  depth\n",
+      "26   VP      3   14      2\n",
+      "Nucleus's (left) nucleus doesn't contain '.', '!', '?', or ';'. Nucleus's right subsegment starts 'and' and its verb belongs to the same subject.\n",
+      "Will use only sub-nucleus.\n",
+      "Satellite's nucleus is on the left.\n",
+      "Nuclei proximity is NucleusProximity.NEAR\n",
+      "Satellite's (left) nucleus contains '.', '!', '?', or ';'.\n",
       "Will use the whole segment.\n",
       "Text extracted from the satellite:\n",
-      "It makes me feel great to do something for the environment.\n",
+      "\" I used to speak too little.  But being a team leader means you have to talk a lot.  You could even call me an excellent speaker today. \"\n",
       "Satellite's nucleus text: \n",
-      "It makes me feel great to do something for the environment.\n",
-      "Satellite:\n",
-      "It makes me feel great to do something for the environment.\n",
-      "ItMakesParseResult(success=True, subject='I', verb='feel', rest='great to do something for the environment .')\n",
-      "Satellite's nucleus starts with 'It makes/made'.\n",
+      "\" I used to speak too little.  But being a team leader means you have to talk a lot.  You could even call me an excellent speaker today. \"\n",
+      "Nucleus starts with 'but'.\n",
       "Taking the last sentence and resolving pronouns:\n",
-      "I'm often there for three hours. \n",
+      "But Wang has got used to it \n",
       "---> \n",
-      "I'm often there for three hours.\n",
+      "Wang has got used to it.\n",
       "Taking the first sentence and removing leading words:\n",
       "-- syntactic parsing result\n",
       " (ROOT\n",
-      "  (S\n",
+      "  (S ('' '')\n",
       "    (NP (PRP I))\n",
-      "    (VP (VBP feel)\n",
-      "      (ADJP (JJ great)\n",
-      "        (S\n",
-      "          (VP (TO to)\n",
-      "            (VP (VB do)\n",
-      "              (NP (NN something))\n",
-      "              (PP (IN for)\n",
-      "                (NP (DT the) (NN environment))))))))\n",
+      "    (VP (VBD used)\n",
+      "      (S\n",
+      "        (VP (TO to)\n",
+      "          (VP (VB speak)\n",
+      "            (ADJP (RB too) (JJ little))))))\n",
       "    (. .)))\n",
-      "I feel great to do something for the environment. \n",
+      "No tokens before the first NP will be removed because the sentence is either empty or starts with if/when/as, quotation mark,or an imperative verb.\n",
+      "\" I used to speak too little.  But being a team leader means you have to talk a lot.  You could even call me an excellent speaker today. \" \n",
       "---> \n",
-      "I feel great to do something for the environment.\n",
+      "''I used to speak little.''\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"I'm often there for three hours because I feel great to do something for the environment.\",\n",
-      "  \"nucleus\": \"I'm often there for three hours\",\n",
+      "  \"statement_text\": \"Wang has got used to it because ''I used to speak little.''\",\n",
+      "  \"nucleus\": \"Wang has got used to it\",\n",
       "  \"connective\": \" because \",\n",
-      "  \"satellite_nucleus\": \"I feel great to do something for the environment.\",\n",
-      "  \"left_boundary\": 1007,\n",
-      "  \"right_boundary\": 1105,\n",
-      "  \"split_point\": 1043,\n",
-      "  \"nucleus_proximity\": \"far\",\n",
+      "  \"satellite_nucleus\": \"''I used to speak little.''\",\n",
+      "  \"left_boundary\": 1048,\n",
+      "  \"right_boundary\": 1251,\n",
+      "  \"split_point\": 1108,\n",
+      "  \"nucleus_proximity\": \"near\",\n",
       "  \"rule\": \"explanation_01\",\n",
       "  \"reason\": [\n",
-      "    6,\n",
-      "    \"Satellite's nucleus starts with 'It makes/made'.\"\n",
+      "    1,\n",
+      "    \"Nucleus starts with 'but'.\"\n",
       "  ]\n",
       "}\n"
      ]
@@ -455,7 +509,7 @@
     "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
     "    rule = RuleExplanation01()\n",
     "\n",
-    "    with open(\"../parsed/race/train/middle/8123.txt.tree\", \"rt\") as f:\n",
+    "    with open(\"../parsed/race/test/middle/1.txt.tree\", \"rt\") as f:\n",
     "        tree_text = f.read()\n",
     "\n",
     "    text, relations = relation_extraction.read_relations(\n",
@@ -468,6 +522,46 @@
     "    statement = rule.generate_statement(text, expl, verbose=True)\n",
     "    print(\"\\nRESULT:\")\n",
     "    print(json.dumps(statement._asdict(), indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"''I used to speak little.''\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp.take_first_sentence_and_remove_leading_words(\"\\\" I used to speak too little.  But being a team leader means you have to talk a lot.  You could even call me an excellent speaker today. \\\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"''I used to speak little.''\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp.fix_quotes(\"''I used to speak little.\")"
    ]
   },
   {
