--- a/project/explanation_02.ipynb
+++ b/project/explanation_02.ipynb
@@ -158,7 +158,7 @@
     "                    )\n",
     "                    new_st, sent_no = nlp.move_st(text, ss_segment.start, 5)\n",
     "                    resolved_subjects = nlp.get_resolved_subjects(\n",
-    "                        text[new_st:ss_segment.end]\n",
+    "                        text[new_st:ss_segment.end], True\n",
     "                    )\n",
     "                    if len(resolved_subjects) > 0:\n",
     "                        resolved_subject = resolved_subjects[-1]\n",
@@ -173,11 +173,12 @@
     "                                self._finalise_statement_parts(\n",
     "                                    info.nucleus_preparation_result.prepared_text,\n",
     "                                    info.satellite_preparation_result.prepared_text,\n",
-    "                                    verbose\n",
+    "                                    verbose,\n",
+    "                                    add_punctuation=True\n",
     "                                )\n",
     "                            return self._generate_statement(\n",
     "                                final_nucleus_text, \n",
-    "                                f\". That is why {resolved_subject} {verb} \",\n",
+    "                                f\" That is why {resolved_subject} {verb} \",\n",
     "                                (\n",
     "                                    utils.fix_quotes(final_sn_text) \n",
     "                                        if final_sn_text is not None else None\n",
@@ -273,11 +274,12 @@
     "            final_nucleus_text, final_sn_text = self._finalise_statement_parts(\n",
     "                info.nucleus_preparation_result.prepared_text,\n",
     "                info.satellite_preparation_result.prepared_text,\n",
-    "                verbose\n",
+    "                verbose,\n",
+    "                add_punctuation=True\n",
     "            )\n",
     "            return self._generate_statement(\n",
     "                final_nucleus_text, \n",
-    "                \". That is why \", \n",
+    "                \" That is why \", \n",
     "                final_sn_text, \n",
     "                relation, \n",
     "                info.nucleus_proximity,\n",
@@ -298,7 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 4 ) Walk with confidence .  It does n't matter how cool your uniform is ( or is not ) .  If you are not confident , nobody will notice how great you look !  \n",
+      "\" the tiger said .  The good man asked a tree .  The tree said , \" I give shade .  And yet I am cut down .  Let the tiger eat you . \"  Next , the good man asked a bird .  The bird said , \" I hurt no one .  \n",
       "Nucleus is on the left.\n",
       "Nucleus's depth <= 100.\n",
       "Nucleus is flat.\n",
@@ -308,51 +310,40 @@
       "Satellite's (left) nucleus contains '.', '!', '?', or ';'.\n",
       "Will use the whole segment.\n",
       "Text extracted from the satellite:\n",
-      "It does n't matter how cool your uniform is ( or is not ).  If you are not confident, nobody will notice how great you look!\n",
-      "Nucleus doesn't start with quotes.\n",
-      "Nucleus relation type: '-'.\n",
-      "Satellite relation type: 'Elaboration'.\n",
-      "Common pattern; nucleus without nested relations.\n",
+      "The good man asked a tree.  The tree said, \" I give shade.  And yet I am cut down.  Let the tiger eat you. \"  Next, the good man asked a bird.  The bird said, \" I hurt no one.\n",
+      "Satellite's speech verb: say\n",
+      "The resolved subject: the good man\n",
+      "Nucleus is surrounded by quotation marks and satellite's satellite contains a speech verb.\n",
       "Taking the last sentence and resolving pronouns:\n",
-      "( 4 ) Walk with confidence. \n",
+      "\" the tiger said. \n",
       "---> \n",
-      "(4) Walk with confidence.\n",
+      "the tiger said.\n",
       "Taking the first sentence and removing leading words:\n",
       "-- syntactic parsing result\n",
       " (ROOT\n",
       "  (S\n",
-      "    (NP (PRP It))\n",
-      "    (VP (VBZ does) (RB n't)\n",
-      "      (VP (VB matter)\n",
-      "        (SBAR\n",
-      "          (WHADVP (WRB how)\n",
-      "            (ADJP (JJ cool)))\n",
-      "          (S\n",
-      "            (NP (PRP$ your) (NN uniform))\n",
-      "            (VP (VBZ is)\n",
-      "              (PRN (-LRB- -LRB-)\n",
-      "                (CC or)\n",
-      "                (VP (VBZ is) (RB not))\n",
-      "                (-RRB- -RRB-)))))))\n",
+      "    (NP (DT The) (JJ good) (NN man))\n",
+      "    (VP (VBD asked)\n",
+      "      (NP (DT a) (NN tree)))\n",
       "    (. .)))\n",
-      "It does n't matter how cool your uniform is ( or is not ).  If you are not confident, nobody will notice how great you look! \n",
+      "The good man asked a tree.  The tree said, \" I give shade.  And yet I am cut down.  Let the tiger eat you. \"  Next, the good man asked a bird.  The bird said, \" I hurt no one. \n",
       "---> \n",
-      "It does n't matter how cool your uniform is (or is not).\n",
+      "the good man asked a tree.\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"(4) Walk with confidence. That is why it does n't matter how cool your uniform is (or is not).\",\n",
-      "  \"nucleus\": \"(4) Walk with confidence\",\n",
-      "  \"connective\": \". That is why \",\n",
-      "  \"satellite_nucleus\": \"it does n't matter how cool your uniform is (or is not).\",\n",
-      "  \"left_boundary\": 892,\n",
-      "  \"right_boundary\": 1051,\n",
-      "  \"split_point\": 922,\n",
+      "  \"statement_text\": \"The tiger said. That is why the good man said \\\"the good man asked a tree.\\\"\",\n",
+      "  \"nucleus\": \"The tiger said.\",\n",
+      "  \"connective\": \" That is why the good man said \",\n",
+      "  \"satellite_nucleus\": \"\\\"the good man asked a tree.\\\"\",\n",
+      "  \"left_boundary\": 616,\n",
+      "  \"right_boundary\": 822,\n",
+      "  \"split_point\": 636,\n",
       "  \"nucleus_proximity\": \"near\",\n",
       "  \"rule\": \"explanation_02\",\n",
       "  \"reason\": [\n",
-      "    3,\n",
-      "    \"Common pattern; nucleus without nested relations.\"\n",
+      "    1,\n",
+      "    \"Nucleus is surrounded by quotation marks and satellite's satellite contains a speech verb.\"\n",
       "  ]\n",
       "}\n"
      ]
@@ -362,7 +353,7 @@
     "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
     "    rule = RuleExplanation02()\n",
     "\n",
-    "    with open(\"../parsed/race/train/middle/3972.txt.tree\", \"rt\") as f:\n",
+    "    with open(\"../parsed/race/test/middle/3797.txt.tree\", \"rt\") as f:\n",
     "        tree_text = f.read()\n",
     "\n",
     "    text, relations = relation_extraction.read_relations(\n",
@@ -377,6 +368,15 @@
     "    if statement is not None:\n",
     "        print(json.dumps(statement._asdict(), indent=2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -454,7 +454,7 @@
       "Taking the last sentence and resolving pronouns:\n",
       "\" I'm so worried about our farm, \" she wrote. \n",
       "---> \n",
-      "I'm so worried about our farm,'' she wrote.\n",
+      "''I'm so worried about our farm,'' she wrote.\n",
       "Taking the first sentence and removing leading words:\n",
       "-- syntactic parsing result\n",
       " (ROOT\n",
@@ -465,16 +465,17 @@
       "      (PP (TO to)\n",
       "        (NP (NN plant) (NNS potatoes))))\n",
       "    (. .)))\n",
+      "No tokens before the first NP will be removed because the sentence is either empty or starts with if/when/as, quotation mark,or an imperative verb.\n",
       "\" It' stime to plant potatoes.  I ca n't dig all the fields by myself.  Jim read the letter and became sad.  \" What can I do? \" he thought.  Then he had a good idea.  He wrote to his mother, \" Do n't dig the fields, there's a pot of money in the earth.  Do n't plant potatoes until I come home.  \" Some days later, Jim got another letter from his mother.  It said, \" Two days ago, about ten men came to our farm and dug all our fields. \n",
       "---> \n",
       "It' stime to plant potatoes.\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"I'm so worried about our farm,'' she wrote. That is why another letter said \\\"it' stime to plant potatoes.\\\"\",\n",
-      "  \"nucleus\": \"I'm so worried about our farm,'' she wrote\",\n",
-      "  \"connective\": \". That is why another letter said \",\n",
-      "  \"satellite_nucleus\": \"\\\"it' stime to plant potatoes.\\\"\",\n",
+      "  \"statement_text\": \"''I'm so worried about our farm,'' she wrote. That is why another letter said \\\"It' stime to plant potatoes.\\\"\",\n",
+      "  \"nucleus\": \"''I'm so worried about our farm,'' she wrote.\",\n",
+      "  \"connective\": \" That is why another letter said \",\n",
+      "  \"satellite_nucleus\": \"\\\"It' stime to plant potatoes.\\\"\",\n",
       "  \"left_boundary\": 95,\n",
       "  \"right_boundary\": 599,\n",
       "  \"split_point\": 145,\n",
@@ -529,13 +530,12 @@
       "Text extracted from the satellite:\n",
       "\" When I talked with him, I noticed that his clothes were carefully brushed, his hair in nice order, and his teeth as white as milk.  When he wrote his name, I noticed that his fingernails were clean ; instead of having some untidy personal habits.  \" Do n't you call these things letters of recommendation?  I do ; and the things that I can discover a boy by using my eyes for ten minutes, is worth more than all the fine letters that he can bring. \"\n",
       "Satellite's speech verb: call\n",
-      "The resolved subject: my\n",
+      "The resolved subject: I\n",
       "Nucleus is surrounded by quotation marks and satellite's satellite contains a speech verb.\n",
       "Taking the last sentence and resolving pronouns:\n",
-      "Substituting 'he' for 'he'.\n",
       "\" And he waited quietly for his turn, instead of pushing the others aside ; showing that he was modest ( ). \n",
       "---> \n",
-      "he was modest ().\n",
+      "And he waited quietly for his turn, instead of pushing the others aside; showing that he was modest ().\n",
       "Taking the first sentence and removing leading words:\n",
       "-- syntactic parsing result\n",
       " (ROOT\n",
@@ -574,16 +574,17 @@
       "                (PP (IN as)\n",
       "                  (NP (NN milk)))))))))\n",
       "    (. .)))\n",
+      "No tokens before the first NP will be removed because the sentence is either empty or starts with if/when/as, quotation mark,or an imperative verb.\n",
       "\" When I talked with him, I noticed that his clothes were carefully brushed, his hair in nice order, and his teeth as white as milk.  When he wrote his name, I noticed that his fingernails were clean ; instead of having some untidy personal habits.  \" Do n't you call these things letters of recommendation?  I do ; and the things that I can discover a boy by using my eyes for ten minutes, is worth more than all the fine letters that he can bring. \" \n",
       "---> \n",
-      "I talked with him, I noticed that his clothes were carefully brushed, his hair in nice order, and his teeth as white as milk.\n",
+      "When I talked with him, I noticed that his clothes were carefully brushed, his hair in nice order, and his teeth as white as milk.\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"He was modest (). That is why my called \\\"I talked with him, I noticed that his clothes were carefully brushed, his hair in nice order, and his teeth as white as milk.\\\"\",\n",
-      "  \"nucleus\": \"He was modest ()\",\n",
-      "  \"connective\": \". That is why my called \",\n",
-      "  \"satellite_nucleus\": \"\\\"I talked with him, I noticed that his clothes were carefully brushed, his hair in nice order, and his teeth as white as milk.\\\"\",\n",
+      "  \"statement_text\": \"And he waited quietly for his turn, instead of pushing the others aside; showing that he was modest (). That is why I called \\\"When I talked with him, I noticed that his clothes were carefully brushed, his hair in nice order, and his teeth as white as milk.\\\"\",\n",
+      "  \"nucleus\": \"And he waited quietly for his turn, instead of pushing the others aside; showing that he was modest ().\",\n",
+      "  \"connective\": \" That is why I called \",\n",
+      "  \"satellite_nucleus\": \"\\\"When I talked with him, I noticed that his clothes were carefully brushed, his hair in nice order, and his teeth as white as milk.\\\"\",\n",
       "  \"left_boundary\": 888,\n",
       "  \"right_boundary\": 1461,\n",
       "  \"split_point\": 999,\n",
