--- a/project/explanation_03.ipynb
+++ b/project/explanation_03.ipynb
@@ -178,11 +178,12 @@
     "            final_nucleus_text, final_sn_text = self._finalise_statement_parts(\n",
     "                info.nucleus_preparation_result.prepared_text,\n",
     "                info.satellite_preparation_result.prepared_text,\n",
-    "                verbose\n",
+    "                verbose,\n",
+    "                add_punctuation=True\n",
     "            )\n",
     "            return self._generate_statement(\n",
     "                final_nucleus_text, \n",
-    "                \". Moreover, \", \n",
+    "                \" Moreover, \", \n",
     "                final_sn_text, \n",
     "                relation, \n",
     "                info.nucleus_proximity,\n",
@@ -205,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "He did not take any food or water with him .  Every day Dr. Bombard drank just a little sea water .  He also caught fish and they had water in them .  \n",
+      "The tiger jumped out .  \" How silly you are , \" the tiger laughed .  \" Now I am going to eat you . \"  \" Wait ! \" the man cried .  \" You ought not to eat me .  Let us ask others what they think . \"  \" You may ask three others .  \" the tiger said .  The good man asked a tree .  The tree said , \" I give shade .  And yet I am cut down .  Let the tiger eat you . \"  Next , the good man asked a bird .  The bird said , \" I hurt no one .  \n",
       "Nucleus is on the left.\n",
       "Nucleus's depth <= 100.\n",
       "Nucleus is flat.\n",
@@ -215,39 +216,47 @@
       "Satellite's (left) nucleus contains '.', '!', '?', or ';'.\n",
       "Will use the whole segment.\n",
       "Text extracted from the satellite:\n",
-      "Every day Dr. Bombard drank just a little sea water.  He also caught fish and they had water in them.\n",
-      "Satellite's nucleus contains 'in fact' / 'as a matter of fact' / 'actually' / 'indeed' / 'also'.\n",
+      "\" How silly you are, \" the tiger laughed.  \" Now I am going to eat you. \"  \" Wait! \" the man cried.  \" You ought not to eat me.  Let us ask others what they think. \"  \" You may ask three others.  \" the tiger said.  The good man asked a tree.  The tree said, \" I give shade.  And yet I am cut down.  Let the tiger eat you. \"  Next, the good man asked a bird.  The bird said, \" I hurt no one.\n",
+      "Nucleus' subject is 'the tiger'.\n",
+      "The subject of satellite's nucleus is 'the tiger'.\n",
+      "Nucleus and satellite's nucleus have the same subject.\n",
       "Taking the last sentence and resolving pronouns:\n",
-      "He did not take any food or water with him. \n",
+      "The tiger jumped out. \n",
       "---> \n",
-      "He did not take any food or water with him.\n",
+      "The tiger jumped out.\n",
       "Taking the first sentence and removing leading words:\n",
       "-- syntactic parsing result\n",
       " (ROOT\n",
-      "  (S\n",
-      "    (NP-TMP (DT Every) (NN day))\n",
-      "    (NP (NNP Dr.) (NNP Bombard))\n",
-      "    (VP (VBD drank)\n",
-      "      (NP (RB just) (DT a) (JJ little) (NN sea) (NN water)))\n",
-      "    (. .)))\n",
-      "Every day Dr. Bombard drank just a little sea water.  He also caught fish and they had water in them. \n",
+      "  (S ('' '')\n",
+      "    (S\n",
+      "      (FRAG\n",
+      "        (WHADVP (WRB How))\n",
+      "        (ADJP (JJ silly)))\n",
+      "      (NP (PRP you))\n",
+      "      (VP (VBP are)))\n",
+      "    (, ,) ('' '')\n",
+      "    (NP (DT the) (NN tiger))\n",
+      "    (VP (VBD laughed))\n",
+      "    (. .) ('' '')))\n",
+      "No tokens before the first NP will be removed because the sentence is either empty or starts with if/when/as, quotation mark,or an imperative verb.\n",
+      "\" How silly you are, \" the tiger laughed.  \" Now I am going to eat you. \"  \" Wait! \" the man cried.  \" You ought not to eat me.  Let us ask others what they think. \"  \" You may ask three others.  \" the tiger said.  The good man asked a tree.  The tree said, \" I give shade.  And yet I am cut down.  Let the tiger eat you. \"  Next, the good man asked a bird.  The bird said, \" I hurt no one. \n",
       "---> \n",
-      "Dr. Bombard drank just a little sea water.\n",
+      "''How silly you are,'' the tiger laughed.\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"He did not take any food or water with him. Moreover, Dr. Bombard drank just a little sea water.\",\n",
-      "  \"nucleus\": \"He did not take any food or water with him\",\n",
-      "  \"connective\": \". Moreover, \",\n",
-      "  \"satellite_nucleus\": \"Dr. Bombard drank just a little sea water.\",\n",
-      "  \"left_boundary\": 647,\n",
-      "  \"right_boundary\": 798,\n",
-      "  \"split_point\": 693,\n",
+      "  \"statement_text\": \"The tiger jumped out. Moreover, ''How silly you are,'' the tiger laughed.\",\n",
+      "  \"nucleus\": \"The tiger jumped out.\",\n",
+      "  \"connective\": \" Moreover, \",\n",
+      "  \"satellite_nucleus\": \"''How silly you are,'' the tiger laughed.\",\n",
+      "  \"left_boundary\": 388,\n",
+      "  \"right_boundary\": 822,\n",
+      "  \"split_point\": 412,\n",
       "  \"nucleus_proximity\": \"near\",\n",
       "  \"rule\": \"explanation_03\",\n",
       "  \"reason\": [\n",
-      "    1,\n",
-      "    \"Satellite's nucleus contains 'in fact' / 'as a matter of fact' / 'actually' / 'indeed' / 'also'.\"\n",
+      "    3,\n",
+      "    \"Nucleus and satellite's nucleus have the same subject.\"\n",
       "  ]\n",
       "}\n"
      ]
@@ -257,14 +266,14 @@
     "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
     "    rule = RuleExplanation03()\n",
     "\n",
-    "    with open(\"../parsed/race/train/middle/14.txt.tree\", \"rt\") as f:\n",
+    "    with open(\"../parsed/race/test/middle/3797.txt.tree\", \"rt\") as f:\n",
     "        tree_text = f.read()\n",
     "\n",
     "    text, relations = relation_extraction.read_relations(\n",
     "        tree_text.replace(\"<s>\", \"\").replace(\"<P>\", \"\")\n",
     "    )\n",
     "\n",
-    "    expl = relations[\"Explanation\"][1]\n",
+    "    expl = relations[\"Explanation\"][2]\n",
     "    print(text[expl.left.start:expl.right.end])\n",
     "\n",
     "    statement =rule.generate_statement(text, expl, verbose=True)\n",
@@ -299,22 +308,11 @@
       "Students who improve their reading and writing skills will increase their vocabulary and their ability to use the English language correctly. \n",
       "---> \n",
       "Students who improve their reading and writing skills will increase their vocabulary and their ability to use the English language correctly.\n",
-      "Taking the first sentence and removing leading words:\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-25267a8c504e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mexpl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mexpl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mstatement\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mrule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerate_statement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\nRESULT:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mstatement\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-4-3138013e552f>\u001b[0m in \u001b[0;36mgenerate_statement\u001b[0;34m(self, text, relation, verbose, **kwargs)\u001b[0m\n\u001b[1;32m    118\u001b[0m                 \u001b[0minfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnucleus_preparation_result\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprepared_text\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m                 \u001b[0minfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msatellite_preparation_result\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprepared_text\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 120\u001b[0;31m                 \u001b[0mverbose\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    121\u001b[0m             )\n\u001b[1;32m    122\u001b[0m             return self._generate_statement(\n",
-      "\u001b[0;32m~/mt/project/rule_base.ipynb\u001b[0m in \u001b[0;36m_finalise_statement_parts\u001b[0;34m(self, prepared_nucleus_text, prepared_sn_text, verbose)\u001b[0m\n",
-      "\u001b[0;32m~/mt/project/preparation.ipynb\u001b[0m in \u001b[0;36mfinalise_satellite_nucleus_text\u001b[0;34m(sn_text, verbose)\u001b[0m\n",
-      "\u001b[0;32m~/mt/project/aux/nlp.ipynb\u001b[0m in \u001b[0;36mtake_first_sentence_and_remove_leading_words\u001b[0;34m(text, verbose)\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
+      "Taking the first sentence and removing leading words:\n",
+      "Error: CoreNLP request timed out. Your document may be too long.\n",
+      "Either final_nucleus_text or final_sn_text is None.\n",
+      "\n",
+      "RESULT:\n"
      ]
     }
    ],
@@ -337,6 +335,15 @@
     "    if statement is not None:\n",
     "        print(json.dumps(statement._asdict(), indent=2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
