--- a/project/explanation_04.ipynb
+++ b/project/explanation_04.ipynb
@@ -137,7 +137,7 @@
     "        ):\n",
     "            return \", and \"\n",
     "        else:\n",
-    "            return \". In fact, \"\n",
+    "            return \" In fact, \"\n",
     "                \n",
     "    def generate_statement(self, text, relation, verbose=False, **kwargs):\n",
     "        assert(relation is not None and relation.type == \"Explanation\")\n",
@@ -206,6 +206,10 @@
     "                connective = RuleExplanation04.choose_connective(\n",
     "                    final_nucleus_text, final_sn_text\n",
     "                )\n",
+    "                if connective == \" In fact, \":\n",
+    "                    final_nucleus_text = self._add_punctuation(\n",
+    "                        final_nucleus_text\n",
+    "                    )\n",
     "                return self._generate_statement(\n",
     "                    final_nucleus_text, \n",
     "                    connective, \n",
@@ -283,8 +287,8 @@
       "RESULT:\n",
       "{\n",
       "  \"statement_text\": \"He said his purpose was to ''teach,'' but he wanted to make a lot of money first. In fact, I told my brother to forget about the money, and I advised him to focus on his purpose.\",\n",
-      "  \"nucleus\": \"He said his purpose was to ''teach,'' but he wanted to make a lot of money first\",\n",
-      "  \"connective\": \". In fact, \",\n",
+      "  \"nucleus\": \"He said his purpose was to ''teach,'' but he wanted to make a lot of money first.\",\n",
+      "  \"connective\": \" In fact, \",\n",
       "  \"satellite_nucleus\": \"I told my brother to forget about the money, and I advised him to focus on his purpose.\",\n",
       "  \"left_boundary\": 971,\n",
       "  \"right_boundary\": 2081,\n",
@@ -473,13 +477,13 @@
       "    (. .)))\n",
       "It's also lovely when a kid cleans up his or her room without being asked.  And if you try not fight with your brothers or sisters, your parents will be so happy.  Do your best at whatever you do. \n",
       "---> \n",
-      "It's lovely when a kid cleans up his or her room without being asked.\n",
+      "it's lovely when a kid cleans up his or her room without being asked.\n",
       "\n",
       "RESULT:\n",
       "{\n",
       "  \"statement_text\": \"You can give your parents a happy day with a card or a joke. In fact, it's lovely when a kid cleans up his or her room without being asked.\",\n",
-      "  \"nucleus\": \"You can give your parents a happy day with a card or a joke\",\n",
-      "  \"connective\": \". In fact, \",\n",
+      "  \"nucleus\": \"You can give your parents a happy day with a card or a joke.\",\n",
+      "  \"connective\": \" In fact, \",\n",
       "  \"satellite_nucleus\": \"it's lovely when a kid cleans up his or her room without being asked.\",\n",
       "  \"left_boundary\": 649,\n",
       "  \"right_boundary\": 915,\n",
@@ -570,17 +574,17 @@
       "                  (PP (IN on)\n",
       "                    (NP (NN island))))))))))\n",
       "    (. ?) ('' '') ('' '')))\n",
-      "No tokens before the first NP will be removed because the sentence starts with if/when/as or an imperative verb.\n",
+      "No tokens before the first NP will be removed because the sentence is either empty or starts with if/when/as, quotation mark,or an imperative verb.\n",
       "As the ship was about to leave, the first man heard a voice, \" Why are you leaving your friend on island? \"  \" My gs are mine alone, since I was the one that prayed for them, \" the first man answered.  \" His prayers were all unanswered. \" \n",
       "---> \n",
-      "As the ship was about to leave, the first man heard a voice, ''Why are you leaving your friend on island?'' ''.\n",
+      "as the ship was about to leave, the first man heard a voice, ''Why are you leaving your friend on island?'' ''''\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"The first man decided to leave alone. In fact, as the ship was about to leave, the first man heard a voice, ''Why are you leaving your friend on island?'' ''.\",\n",
-      "  \"nucleus\": \"The first man decided to leave alone\",\n",
-      "  \"connective\": \". In fact, \",\n",
-      "  \"satellite_nucleus\": \"as the ship was about to leave, the first man heard a voice, ''Why are you leaving your friend on island?'' ''.\",\n",
+      "  \"statement_text\": \"The first man decided to leave alone. In fact, as the ship was about to leave, the first man heard a voice, ''Why are you leaving your friend on island?'' ''''\",\n",
+      "  \"nucleus\": \"The first man decided to leave alone.\",\n",
+      "  \"connective\": \" In fact, \",\n",
+      "  \"satellite_nucleus\": \"as the ship was about to leave, the first man heard a voice, ''Why are you leaving your friend on island?'' ''''\",\n",
       "  \"left_boundary\": 649,\n",
       "  \"right_boundary\": 936,\n",
       "  \"split_point\": 689,\n",
