--- a/project/explanation_06.ipynb
+++ b/project/explanation_06.ipynb
@@ -116,11 +116,12 @@
     "            final_nucleus_text, final_sn_text = self._finalise_statement_parts(\n",
     "                info.nucleus_preparation_result.prepared_text,\n",
     "                info.satellite_preparation_result.prepared_text,\n",
-    "                verbose\n",
+    "                verbose,\n",
+    "                add_punctuation=True\n",
     "            )\n",
     "            return self._generate_statement(\n",
     "                final_nucleus_text, \n",
-    "                \". Also, \", \n",
+    "                \" Also, \", \n",
     "                final_sn_text, \n",
     "                relation, \n",
     "                info.nucleus_proximity,\n",
@@ -188,14 +189,14 @@
       "    (. .)))\n",
       "It's also lovely when a kid cleans up his or her room without being asked.  And if you try not fight with your brothers or sisters, your parents will be so happy.  Do your best at whatever you do. \n",
       "---> \n",
-      "It's also lovely when a kid cleans up his or her room without being asked.\n",
+      "it's lovely when a kid cleans up his or her room without being asked.\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"You can give your parents a happy day with a card or a joke. Also, it's also lovely when a kid cleans up his or her room without being asked.\",\n",
-      "  \"nucleus\": \"You can give your parents a happy day with a card or a joke\",\n",
-      "  \"connective\": \". Also, \",\n",
-      "  \"satellite_nucleus\": \"it's also lovely when a kid cleans up his or her room without being asked.\",\n",
+      "  \"statement_text\": \"You can give your parents a happy day with a card or a joke. Also, it's lovely when a kid cleans up his or her room without being asked.\",\n",
+      "  \"nucleus\": \"You can give your parents a happy day with a card or a joke.\",\n",
+      "  \"connective\": \" Also, \",\n",
+      "  \"satellite_nucleus\": \"it's lovely when a kid cleans up his or her room without being asked.\",\n",
       "  \"left_boundary\": 649,\n",
       "  \"right_boundary\": 915,\n",
       "  \"split_point\": 712,\n",
@@ -228,6 +229,15 @@
     "    if statement is not None:\n",
     "        print(json.dumps(statement._asdict(), indent=2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
