--- a/project/preparation.ipynb
+++ b/project/preparation.ipynb
@@ -487,7 +487,11 @@
    },
    "outputs": [],
    "source": [
-    "def finalise_nucleus_text(nucleus_text, verbose=False):\n",
+    "def add_punctuation(text):\n",
+    "    return nlp.trim_and_fix_punctuation(text)\n",
+    "\n",
+    "\n",
+    "def finalise_nucleus_text(nucleus_text, verbose=False, should_add_punctuation=False):\n",
     "    processed_nucleus_text = nlp.take_last_sentence_and_resolve_pronouns(\n",
     "        nucleus_text, verbose\n",
     "    )\n",
@@ -497,11 +501,15 @@
     "    ):\n",
     "        return None\n",
     "    else:\n",
-    "        return utils.remove_trailing_punctuation(\n",
+    "        prepared_nucleus_text = utils.remove_trailing_punctuation(\n",
     "            utils.uppercase_first_letter(\n",
     "                processed_nucleus_text\n",
     "            )\n",
     "        )\n",
+    "        if should_add_punctuation:\n",
+    "            return add_punctuation(prepared_nucleus_text)\n",
+    "        else:\n",
+    "            return prepared_nucleus_text\n",
     "    \n",
     "    \n",
     "def finalise_satellite_nucleus_text(sn_text, verbose=False):\n",
